package com.michalkubiak.strategy;

public interface Filtering {
    void filter(String file);
}
